# nvflow_sherlock

./: .gitignore  pyproject.toml  slurm-24368402.out  slurm-24368719.out  slurm-24370489.out
scripts/: copy.sh  update_plyze.sh
scripts/moves/: run.sh  test.sh
scripts/sbatch/: run.sh  test.sh
scripts/smk/: run.sh  test.sh
smkconfig/: run.yaml  test.yaml
workflow/: Snakefile
