[project]
name = "nvflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Juliet Nwagwu Ume-Ezeoke", email = "jnwagwu@stanford.edu" },
]
requires-python = ">=3.13"
dependencies = [
  "altair>=6.0.0",
  "ipython>=9.12.0",
  "loguru>=0.7.3",
  "patito>=0.8.6",
  "plyze==0.1.20",
  "snakemake>=9.19.0",
  "vl-convert-python>=1.9.0.post1",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

# [tool.uv.sources]
# plyze = { path = "../../../plyze", editable = true }

# [dependency-groups]
# dev = ["plyze"]


[project.scripts]
nvflow = "nvflow.cli.make.main:main"
nvflow-studies = "nvflow.cli.studies:main"
